[build-system]
requires = ["setuptools", "sphinx", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''
