[build-system]
requires = [
    "setuptools>=40.6.0,!=60.9.0",
    "sphinx",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''
